--- a/public/css/app.css
+++ b/public/css/app.css
@@ -586,7 +586,7 @@ header .profile img {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  border: 1px solid orange;
+  border: 1px solid grey;
   margin-top: 1.5rem;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -594,10 +594,12 @@ header .profile img {
 
 .single-chart {
   position: relative;
-  border: 1px solid red;
+  border: 1px solid grey;
+  border-radius: 1rem;
   width: 225px;
   height: 225px;
   margin: 1rem;
+  padding: 1rem;
 }
 
 .single-chart-description {
@@ -609,9 +611,21 @@ header .profile img {
   transform: translate(-50%, 0);
 }
 
+.single-chart-status {
+  position: absolute;
+  left: 50%;
+  top: 45%;
+  transform: translate(-50%, -50%);
+  border: 2px solid grey;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  font-size: 1.25rem;
+  font-weight: bold;
+  background-color: #1a1a1a;
+}
+
 .circular-chart {
   position: absolute;
-  border: 1px solid blue;
   left: 10%;
 }
 
