--- a/resources/sass/components/charts/circular.scss
+++ b/resources/sass/components/charts/circular.scss
@@ -1,9 +1,11 @@
 .single-chart {
     position: relative;
-    border: 1px solid red;
+    border: 1px solid grey;
+    border-radius: 1rem;
     width: 225px;
     height: 225px;
     margin: 1rem;
+    padding: 1rem;
 
     &-description{
         position: absolute;
@@ -14,11 +16,26 @@
         // border: 1px solid yellow;
         transform: translate(-50%,0);
     }
+
+    &-status{
+        position: absolute;
+        left: 50%;
+        top: 45%;
+        transform: translate(-50%,-50%);
+        border: 2px solid grey;
+        border-radius: 0.5rem;
+        padding: 1.00rem;
+        font-size: 1.25rem;
+        font-weight: bold;
+        background-color: $darkgrey;
+
+
+    }
 }
 
 .circular-chart {
     position: absolute;
-    border: 1px solid blue;
+    // border: 1px solid blue;
     left: 10%;
 }
 
