--- a/resources/sass/dash/dash.scss
+++ b/resources/sass/dash/dash.scss
@@ -97,7 +97,7 @@ header{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border: 1px solid orange;
+    border: 1px solid grey;
     margin-top: 1.5rem;
     padding-left: 1rem;
     padding-right: 1rem;
